--- a/Final/2018-05-11/css/styles.css
+++ b/Final/2018-05-11/css/styles.css
@@ -42,9 +42,8 @@ body{
 }
 
 img{
-    height: 40px;
-    margin: 0px;
-    padding: 0px;
+    width: 100%;
+    height: 100%;
 }
 body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -147,4 +146,11 @@ input[type=button]:hover {
 #appointments td, #appointments th {
     border: 1px solid #ddd;
     padding: 8px;
+}
+
+#finished { 
+    background-color: green;
+}
+#partial{
+    background-color:yellow;
 }
