--- a/Final/2018-05-11/css/styles.css
+++ b/Final/2018-05-11/css/styles.css
@@ -43,7 +43,11 @@ body{
 
 img{
     width: 100%;
-    height: 100%;
+    height: 200px;
+     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
 body {font-family: Arial, Helvetica, sans-serif;}
 
